Kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: k8s.hochedlinger.at
      http:
        paths:
          - path: /api/flights
            pathType: Prefix
            backend:
              service:
                name: flightservice-clusterip
                port: 
                  number: 80
          - path: /api/bookings
            pathType: Prefix
            backend:
              service:
                name: bookingservice-clusterip
                port: 
                  number: 80
          - path: /api/checkin
            pathType: Prefix
            backend:
              service:
                name: checkinservice-clusterip
                port:
                  number: 80
